--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.3"
+    "nocache": "^4.0.0",
+    "nodemon": "^3.0.3",
+    "uuid": "^9.0.1"
   }
 }
